[project]
name = "fgconfigtools"
version = "1.1.0"
authors = [
    { name = "Derek Dainys"}
]
dependencies = [
    "jsondiff"
]
classifiers = [
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13"
]
readme = "README.md"
license = "MIT"

[project.urls]
Repository = "https://github.com/derekdainys/fg-config-tools"
